Minor fix for dark mode

--- a/backstage/css/_night.less
+++ b/backstage/css/_night.less
@@ -51,6 +51,7 @@
                 }
 
                 li.active > a {
+                    &,
                     &:hover,
                     &:active,
                     &:focus {
@@ -62,11 +63,11 @@
     
         .nav-tabs {
             li.active > a {
+                &,
                 &:hover,
                 &:active,
                 &:focus {
-                    color: #fff;
-                    background: #333 !important;;
+                    background: #333 !important;
                 }
             }
         
@@ -74,7 +75,7 @@
                 &:hover,
                 &:active,
                 &:focus {
-                    background: rgba(0,0,0,.2);
+                    background: rgba(0,0,0,.2) !important;
                 }
             }
         }
